# video2audio-rs

./: Cargo.toml  README.md
benches/: conversion_bench.rs
docs/: api-reference.md  architecture.md  contributing.md  optimization-summary.md  user-guide.md
examples/: basic_usage.rs
src/: audio_format.rs  config.rs  error.rs  file_processor.rs  lib.rs  main.rs  user_interface.rs
tests/: integration_tests.rs
tests/common/: mod.rs
